<resources>
    <string name="app_name">大内密探</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_register">设置密码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码长度太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_username">手机号</string>
    <string name="title_activity_basic">大内密探</string>
    <string name="error_invalid_username">用户名格式错误</string>
    <string name="error_invalid_verifycode">验证码错误</string>
    <string name="error_inconsistent_password">密码不一致</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="link_register">注册账号</string>
    <string name="link_register_short">注册</string>
    <string name="link_forgetpwd_short">忘记密码</string>
    <string name="button_register">注册账号</string>
    <string name="prompt_verify">验证码</string>
    <string name="link_verify_short">获取</string>
    <string name="prompt_search">搜索</string>
    <string name="prompt_search_long">搜搜有没有你想要的结果</string>
    <string name="link_search_short">搜索</string>
    <string name="search_button">搜索</string>
    <string name="register_title">注册账号</string>
    <string name="find_password_title">找回密码</string>
    <string name="prompt_password_confirm">再确认密码</string>
    <string name="button_find_password">确认设置</string>
    <string name="loading">正在加载</string>
    <string name="loading_register">正在注册</string>
    <string name="loading_login">正在登录</string>
    <string name="bt_link_goto_main">先去逛逛</string>
    <string name="loading_find_password">正在找回密码</string>
    <string name="prompt_password_new">设置新密码</string>
    <string name="prompt_show_none">暂无节目</string>
    <string name="indicator_main">首页</string>
    <string name="indicator_type">分类</string>
    <string name="indicator_person">我的</string>
    <string name="link_type_more"><![CDATA[查看更多 >]]></string>
    <string name="more_show_title">分类</string>
    <string name="link_cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="action_empty">清空</string>
    <string name="search_hot">热搜榜</string>
    <string name="search_history_none">暂无搜索</string>
    <string name="search_hot_none">暂无搜索</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="person_show_manager">管理节目</string>
    <string name="person_share">分享给好友</string>
    <string name="person_feedback">意见反馈</string>
    <string name="person_protocol">用户协议</string>
    <string name="person_about">关于</string>
    <string name="about_title">关于</string>
    <string name="type_title">分类</string>
    <string name="edit_show_title">填写节目信息</string>
    <string name="edit_summary_title">填写简介</string>
    <string name="edit_show_summary_hint">填写一段简介帮助需要者更快的了解节目信息</string>
    <string name="link_save">保存</string>
    <string name="title_manage_show">管理节目</string>
    <string name="title_distribution_platform">播放平台：</string>
    <string name="title_activity_main">大内密探</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_find_password">找回密码</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_show">节目详情</string>
    <string name="title_activity_add_show">添加节目</string>
    <string name="title_activity_edit_show">编辑节目</string>
    <string name="title_activity_manage_show">管理节目</string>
    <string name="title_activity_more_show">更多节目</string>
    <string name="feedback_title">意见反馈</string>
    <string name="link_send">发送</string>
    <string name="edit_feedback_hint">提供反馈帮助我们更好的优化产品</string>
    <string name="title_activity_feed_back">反馈</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_protocol">协议</string>
    <string name="textShowInvestmentNone">招商中</string>
    <string name="textShowNameNone">欢乐颂</string>
    <string name="textShowCastNone">黄磊</string>
    <string name="string_logo">程序图标</string>
</resources>
