<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--<ProgressBar-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:indeterminateDrawable="@drawable/progressbar_anim" />-->

    <RelativeLayout
        android:id="@+id/toolbar_basic"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginLeft="@dimen/margin_body"
        android:layout_marginRight="@dimen/margin_body"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/link_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/Link"
            android:textSize="16sp"
            android:text="@string/link_cancel" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/ToolBar.Title"
            android:text="@string/edit_summary_title" />

        <TextView
            android:id="@+id/link_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/Link"
            android:textSize="16sp"
            android:text="@string/link_save" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/colorLine" />

    <EditText
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_body"
        style="@style/ShowSummaryEdit"
        android:textCursorDrawable="@color/colorTextCursor"
        android:hint="@string/edit_show_summary_hint"
        android:inputType="textMultiLine" />


</LinearLayout>
