<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heavon.myapplication.MainActivity">

    <FrameLayout
        android:id="@+id/fragment_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/indicator_layout">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true" >
        <View
            android:id="@+id/indicator_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorLine"
            android:layout_alignTop="@+id/indicator_box" />
        <RadioGroup
            android:id="@+id/indicator_box"
            android:layout_width="match_parent"
            android:layout_height="@dimen/indicator_height"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/indicator_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_main_indicator"
                android:text="@string/indicator_main"
                android:checked="true"
                style="@style/Indicator"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/indicator_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_type_indicator"
                android:text="@string/indicator_type"
                style="@style/Indicator"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/indicator_person"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_person_indicator"
                android:text="@string/indicator_person"
                style="@style/Indicator"/>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>
