<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.example.heavon.fragment.PersonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@mipmap/person_thumb" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_body"
            android:layout_marginLeft="@dimen/margin_body"
            android:layout_marginRight="@dimen/margin_body"
            android:layout_marginTop="-23dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/person_avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/avatar"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:layout_toRightOf="@+id/avatar"
                android:layout_toLeftOf="@+id/add_show_button"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:singleLine="true"
                    android:text="未登录"
                    android:textColor="#FF2F3336"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/authority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.54"
                    android:text="管理员"
                    android:visibility="gone"
                    android:textColor="#FF2F3336"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/add_show_button"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/avatar"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:text="新增节目" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/colorLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_body"
            android:layout_marginRight="@dimen/margin_body"
            android:layout_marginBottom="@dimen/margin_body"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/show_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PersonItem"
                android:visibility="gone">

                <TextView
                    style="@style/Text.Person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/person_show_manager" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/next" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PersonItem">

                <TextView
                    style="@style/Text.Person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/person_share" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/next" />

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PersonItem">

                <TextView
                    style="@style/Text.Person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/person_feedback" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/next" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/protocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PersonItem">

                <TextView
                    style="@style/Text.Person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/person_protocol" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/next" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/person_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PersonItem">

                <TextView
                    style="@style/Text.Person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/person_about" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/next" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/person_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PersonItem">

                <TextView
                    style="@style/Text.Person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/login" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/next" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/person_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                style="@style/PersonItem">

                <TextView
                    style="@style/Text.Person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/logout"/>

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/next" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
