<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heavon.fragment.SearchBeforeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_body"
        android:paddingRight="@dimen/padding_body"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="invisible"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Text.Search"
                    android:text="@string/search_history"/>

                <LinearLayout
                    android:id="@+id/search_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentRight="true">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:src="@mipmap/trash"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_empty"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/search_history_box"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--<TextView-->
                    <!--android:id="@+id/show_history_none"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/search_history_none"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:gravity="center"/>-->

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/search_history_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/search_hot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="8dp"
                style="@style/Text.Search"
                android:text="@string/search_hot"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/colorLine">
            </View>

            <!--<TextView-->
                <!--android:id="@+id/show_hot_none"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/search_hot_none"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_gravity="center"-->
                <!--android:gravity="center"/>-->

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_hot_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">


            </android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
